--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
    <!-- END: Google Font -->
 
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="../style.css">
    <title>Note App</title>
  </head>
  <body>
